# AIAA-Systems-Engineering-Workshop

./: Luke The Noteable.xlsx  Physical Architecture Interfaces.xlsx  README.md  Richards Physical Architecture.xlsx  hi.txt  what.xlsx
BOBSAT-1/: Cubesat Reference Model.sysml  Physical architecture interfaces.xlsx  Physical architecture.xlsx  Preliminary Simulations.sysml  README.md  System Architectures.sysml
BOBSAT-1/BOBSAT_SysML_Automation/: README.md  pyproject.toml
BOBSAT-1/BOBSAT_SysML_Automation/src/bobsat_sysml_automation/: extract_model_hierarchy.py
BOBSAT-1/Project Initialization Scripts/: install_dependencies.sh  setup_poetry.sh
BOBSAT-1/PySysML2/: .gitignore  LICENSE  LICENSE.html  PySysML2_notebook.ipynb  README.md  Updated Workflow 20240805.md  environment.yaml  pyproject.toml  setup.py  template.tex  test.py
BOBSAT-1/System Modeling/: Cubesat Reference Model.sysml  System Architectures.sysml
DBF COMP CAD/: ASSEMAA.SLDASM  ASSEMAAA.SLDASM  Full ASSEM.SLDASM  Stringer A.SLDPRT  VISUAL REFRENCE.SLDPRT
DBF COMP CAD/3D print files/: FINAL FINAL RIGHT WING 3MF.3mf
DBF COMP CAD/Tail/: Rudder.SLDPRT  (+22 more)
Design, Build, Fly/: Physical Architecture Interfaces.xlsx
Explainer Demo/: .~lock.Physical Architecture.xlsx#  Harrier Physical Architecture.drawio  Physical Architecture Interfaces.xlsx  Physical Architecture.xlsx  harrier_physical_architecture.sysml  harrier_requirements.sysml
Space Oddity/: B_1R_Architecture.sysml  Physical Architecture interfaces.xlsx  Physical Arcitecture - Space Oddity.xlsx  Physical Arcitecture Systems - Space Oddity.xlsx
(+189 files in other folders)
