[project]
name = "bobsat-sysml-automation"
version = "0.1.0"
description = ""
authors = [
    {name = "alexanderriou",email = "aglasgo@ucmerced.edu"}
]
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry]
packages = [{include = "bobsat_sysml_automation", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
pysysml2 = { path = "../PySysML2", develop = true }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
